objects/ssot__PresentationClickStreamEntry__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AccountLoginName__c</fullName>
        <label>Account Login Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActualUsageDurationNumber__c</fullName>
        <label>Actual Usage Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AttendeeBrowserName__c</fullName>
        <label>Attendee Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AttendeeDeviceOSName__c</fullName>
        <label>Attendee Device OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AttendeeDeviceTypeText__c</fullName>
        <label>Attendee Device Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContentName__c</fullName>
        <label>Content Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContentPageIdentifier__c</fullName>
        <label>Content Page Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContentReactionNumber__c</fullName>
        <label>Content Reaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ContentUrl__c</fullName>
        <label>Content URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceName__c</fullName>
        <label>Data Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Presentation Click Stream Entry Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MetricType__c</fullName>
        <label>Metric Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PresentationFileName__c</fullName>
        <label>Presentation File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PresentationId__c</fullName>
        <label>Presentation</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PresentationName__c</fullName>
        <label>Presentation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PresentationPageContentVerId__c</fullName>
        <label>Presentation Page Content Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PresentationPage__c</fullName>
        <label>Presentation Page</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PresentationVersionText__c</fullName>
        <label>Presentation Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductGuidanceId__c</fullName>
        <label>Product Guidance</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductRecordObject__c</fullName>
        <label>Product Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductReferenceRecordId__c</fullName>
        <label>Product Reference Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderVisitDtlProductMsgId__c</fullName>
        <label>Provider Visit Detailing Product Message</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderVisitId__c</fullName>
        <label>Provider Visit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderVisitPrdDetailingId__c</fullName>
        <label>Provider Visit Product Detailing</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderVisitType__c</fullName>
        <label>Provider Visit Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UsageEndDateTime__c</fullName>
        <label>Usage End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__UsageStartDateTime__c</fullName>
        <label>Usage Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__VisitId__c</fullName>
        <label>Visit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800605732_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PresentationClickStreamEntry_Account_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>PresentationClickStreamEntry_Account_rel</relationshipLabel>
        <relationshipName>rel_1752800605732_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800609663_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PresentationClickStreamEntry_Present_rel</label>
        <referenceTo>ssot__PresentationPage__dlm</referenceTo>
        <relationshipLabel>PresentationClickStreamEntry_Present_rel</relationshipLabel>
        <relationshipName>rel_1752800609663_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800611870_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PresentationClickStreamEntry_Product_rel</label>
        <referenceTo>ssot__ProductGuidance__dlm</referenceTo>
        <relationshipLabel>PresentationClickStreamEntry_Product_rel</relationshipLabel>
        <relationshipName>rel_1752800611870_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>